crates/sui-adapter-transactional-tests/tests/enums/coin_wrapper.exp
processed 3 tasks

init:
A: object(0,0)

task 1, lines 6-48:
//# publish --upgradeable --sender A
Error: error[E03002]: unbound module
  ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.MAqq9H2LX2/.tmpNpksrz:9:9
  │
9 │     use sui::sui::SUI;
  │         ^^^^^^^^ Invalid 'use'. Unbound module: 'sui::sui'

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.MAqq9H2LX2/.tmpNpksrz:12:18
   │
12 │         Sui(Coin<SUI>),
   │                  ^^^ Unbound type 'SUI' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.MAqq9H2LX2/.tmpNpksrz:37:43
   │
37 │     public fun create_sui(coin: &mut Coin<SUI>, amount: u64, ctx: &mut TxContext): CoinObject {
   │                                           ^^^ Unbound type 'SUI' in current scope



task 2, lines 50-52:
//# programmable --sender A --inputs 10 @A
//> 0: Test::f::create_sui(Gas, Input(0));
//> 1: TransferObjects([Result(0)], Input(1))
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }
